--- a/app/src/main/res/layout/fragment_joke.xml
+++ b/app/src/main/res/layout/fragment_joke.xml
@@ -1,18 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-<FrameLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:orientation="vertical"
+    android:weightSum="10"
     tools:context=".JokeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <View
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_weight="2"/>
 
-</FrameLayout>
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Category: "
+       android:textSize="25sp"
+       android:textColor="#2D4ADC"
+       android:layout_marginStart="40dp"
+       />
+
+    <TextView
+        android:id="@+id/categoryText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AAAA"
+        android:textSize="20sp"
+        android:textColor="#65373C"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="15dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Joke: "
+        android:textSize="25sp"
+        android:layout_marginTop="25dp"
+        android:textColor="#2D4ADC"
+        android:layout_marginStart="40dp"/>
+
+    <TextView
+        android:id="@+id/jokeText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AAAA"
+        android:textSize="20sp"
+        android:textColor="#65373C"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="15dp"/>
+
+    <TextView
+        android:id="@+id/jokeText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AAAA"
+        android:textSize="20sp"
+        android:textColor="#65373C"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="15dp"/>
+
+
+
+</LinearLayout>
 
 </layout>
