--- a/app/src/main/res/navigation/nav_view.xml
+++ b/app/src/main/res/navigation/nav_view.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_view">
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_view"
+    app:startDestination="@id/mainFragment">
 
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.suatkkrer.jetpackpractice.MainFragment"
+        android:label="MainFragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_jokeFragment"
+            app:destination="@id/jokeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/jokeFragment"
+        android:name="com.suatkkrer.jetpackpractice.JokeFragment"
+        android:label="JokeFragment" />
 </navigation>
