--- a/app/src/main/res/layout/fragment_joke.xml
+++ b/app/src/main/res/layout/fragment_joke.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/background"
     android:orientation="vertical"
     android:weightSum="10"
-    tools:context=".JokeFragment">
+    tools:context=".View.JokeFragment">
 
     <View
         android:layout_width="1dp"
