--- a/app/src/main/res/layout/fragment_joke.xml
+++ b/app/src/main/res/layout/fragment_joke.xml
@@ -21,7 +21,7 @@
        android:layout_height="wrap_content"
        android:text="Category: "
        android:textSize="25sp"
-       android:textColor="#2D4ADC"
+       android:textColor="@android:color/white"
        android:layout_marginStart="40dp"
        />
 
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="AAAA"
         android:textSize="20sp"
-        android:textColor="#65373C"
+        android:textColor="@android:color/white"
         android:layout_marginStart="50dp"
         android:layout_marginTop="15dp"/>
 
@@ -41,7 +41,7 @@
         android:text="Joke: "
         android:textSize="25sp"
         android:layout_marginTop="25dp"
-        android:textColor="#2D4ADC"
+        android:textColor="@android:color/white"
         android:layout_marginStart="40dp"/>
 
     <TextView
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:text="AAAA"
         android:textSize="20sp"
-        android:textColor="#65373C"
+        android:textColor="@android:color/white"
         android:layout_marginStart="50dp"
         android:layout_marginTop="15dp"/>
 
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:text="AAAA"
         android:textSize="20sp"
-        android:textColor="#65373C"
+        android:textColor="@android:color/white"
         android:layout_marginStart="50dp"
         android:layout_marginTop="15dp"/>
 
